# OpenCVTiny

./: .gitignore  build.gradle  settings.gradle
face-detection/: build.gradle
face-detection/src/org/opencv/samples/facedetect/: FdActivity.java
sdk/: build.gradle
sdk/java/src/org/opencv/codebar/: DetectionCodebarTracker.java
sdk/java/src/org/opencv/detect/: DetectionBasedTracker.java
sdk/libcxx_helper/: BitmapUtil.cpp  CMakeLists.txt  DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h  DetectionCodeBarTracker.h  DetectionCodebarTracker.cpp
sdk/native/jni/abi-arm64-v8a/: OpenCVModules.cmake
sdk/native/jni/include/opencv2/: cvconfig.h
